--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -18,7 +18,7 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev librsvg2-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev
+          sudo apt-get install -y libwebkit2gtk-4.1-dev librsvg2-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev imagemagick
 
       - name: Rust setup
         uses: dtolnay/rust-toolchain@stable
@@ -60,6 +60,12 @@ jobs:
           gh release download --repo xin-Easy/yuHai --pattern "yuHai-ubuntu-latest-*-portable.zip" --dir src-tauri/resources --clobber
           cd src-tauri/resources
           mv yuHai-ubuntu-latest-*-portable.zip yuHai-core.zip
+
+      - name: Generate Icon (Ubuntu)
+        if: matrix.platform == 'ubuntu-22.04'
+        run: |
+          convert src-tauri/icons/icon.ico src-tauri/icons/icon.png
+          convert src-tauri/icons/icon.ico -resize 128x128 src-tauri/icons/128x128.png
 
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
