--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,10 +98,92 @@ jobs:
             src-tauri/target/release/bundle/deb/*.deb
             src-tauri/target/release/bundle/rpm/*.rpm
             src-tauri/target/release/bundle/appimage/*.AppImage
+            src-tauri/target/release/bundle/appimage/*.AppImage.sig
             src-tauri/target/release/bundle/msi/*.msi
+            src-tauri/target/release/bundle/msi/*.msi.sig
             src-tauri/target/release/bundle/nsis/*.exe
+            src-tauri/target/release/bundle/nsis/*.exe.sig
           draft: false
           prerelease: false
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  publish-update:
+    needs: build-tauri
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: write
+    steps:
+      - name: Generate latest.json
+        uses: actions/github-script@v7
+        env:
+          RELEASE_TAG_NAME: ${{ github.ref_name }}
+        with:
+          script: |
+            const fs = require('fs');
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
+            const tag = process.env.RELEASE_TAG_NAME || context.ref.replace('refs/tags/', '');
+            const version = tag.replace(/^v/, '');
+
+            const release = await github.rest.repos.getReleaseByTag({ owner, repo, tag });
+            const assets = release.data.assets || [];
+
+            const findAsset = (matcher) => assets.find((a) => matcher(a.name));
+            const pickSig = async (asset) => {
+              if (!asset) return null;
+              const res = await fetch(asset.browser_download_url, {
+                headers: { Authorization: `token ${process.env.GITHUB_TOKEN}` }
+              });
+              if (!res.ok) {
+                throw new Error(`Failed to fetch signature: ${asset.name}`);
+              }
+              return (await res.text()).trim();
+            };
+
+            const windowsAsset = findAsset((name) => name.endsWith('.exe'));
+            const windowsSigAsset = findAsset((name) => name.endsWith('.exe.sig'));
+            const linuxAsset = findAsset((name) => name.endsWith('.AppImage'));
+            const linuxSigAsset = findAsset((name) => name.endsWith('.AppImage.sig'));
+
+            if (!windowsAsset || !windowsSigAsset) {
+              throw new Error('Missing Windows updater assets (.exe / .exe.sig)');
+            }
+            if (!linuxAsset || !linuxSigAsset) {
+              throw new Error('Missing Linux updater assets (.AppImage / .AppImage.sig)');
+            }
+
+            const windowsSignature = await pickSig(windowsSigAsset);
+            const linuxSignature = await pickSig(linuxSigAsset);
+
+            const latest = {
+              version,
+              notes: release.data.body || '',
+              pub_date: release.data.published_at || new Date().toISOString(),
+              platforms: {
+                'windows-x86_64': {
+                  url: windowsAsset.browser_download_url,
+                  signature: windowsSignature
+                },
+                'linux-x86_64': {
+                  url: linuxAsset.browser_download_url,
+                  signature: linuxSignature
+                }
+              }
+            };
+
+            fs.writeFileSync('latest.json', JSON.stringify(latest, null, 2));
+            console.log('latest.json generated');
+
+      - name: Prepare update site
+        run: |
+          mkdir updater-site
+          mv latest.json updater-site/latest.json
+
+      - name: Publish latest.json to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: updater-site
+          publish_branch: gh-pages
