--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,11 +91,9 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: |
-          $keyPath = "$env:TEMP\tauri.key"
-          Set-Content -Path $keyPath -Value $env:TAURI_SIGNING_PRIVATE_KEY
           $files = Get-ChildItem -Path "src-tauri/target/release/bundle" -Recurse -Include *.exe,*.msi
           foreach ($file in $files) {
-            pnpm tauri signer sign -k $keyPath -p $env:TAURI_SIGNING_PRIVATE_KEY_PASSWORD -f $file.FullName
+            pnpm tauri signer sign --private-key $env:TAURI_SIGNING_PRIVATE_KEY --password $env:TAURI_SIGNING_PRIVATE_KEY_PASSWORD $file.FullName
           }
 
       - name: Generate signatures (Linux)
@@ -105,10 +103,8 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: |
-          KEY_PATH="/tmp/tauri.key"
-          printf "%s" "${TAURI_SIGNING_PRIVATE_KEY}" > "${KEY_PATH}"
           find src-tauri/target/release/bundle -type f \( -name "*.AppImage" -o -name "*.deb" -o -name "*.rpm" \) -print0 | while IFS= read -r -d '' file; do
-            pnpm tauri signer sign -k "${KEY_PATH}" -p "${TAURI_SIGNING_PRIVATE_KEY_PASSWORD}" -f "${file}"
+            pnpm tauri signer sign --private-key "${TAURI_SIGNING_PRIVATE_KEY}" --password "${TAURI_SIGNING_PRIVATE_KEY_PASSWORD}" "${file}"
           done
 
       - name: List bundle files (Debug)
